--- a/src/XNA/FontStashSharp.MonoGame.csproj
+++ b/src/XNA/FontStashSharp.MonoGame.csproj
@@ -6,6 +6,7 @@
     <Description>FontStashSharp for MonoGame</Description>
     <DefineConstants>$(DefineConstants);MONOGAME</DefineConstants>
     <OutputPath>bin\MonoGame\$(Configuration)</OutputPath>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
@@ -18,6 +19,7 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" PrivateAssets="All" Version="$(MonoGameVersion)" />
     <PackageReference Include="Cyotek.Drawing.BitmapFont" Version="$(CyotekDrawingBitmapFontVersion)" />
     <PackageReference Include="StbImageSharp" Version="$(StbImageSharpVersion)" />
+    <PackageReference Include="FreeTypeSharp" Version="3.0.1" />
   </ItemGroup>
   
   <ItemGroup>
